--- a/RailRoadController/RailRoadController.csproj
+++ b/RailRoadController/RailRoadController.csproj
@@ -5,7 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="BL\" />
+    <Folder Include="BL\Locomotive\" />
+    <Folder Include="BL\Switch\" />
     <Folder Include="Controllers\" />
     <Folder Include="Models\" />
     <Folder Include="Mappers\" />
@@ -18,6 +19,10 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\NetCoreSerial\NetCoreSerial.csproj" />
   </ItemGroup>
 
 </Project>
