--- a/RailRoadController/RailRoadController.csproj
+++ b/RailRoadController/RailRoadController.csproj
@@ -5,7 +5,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="BL\Locomotive\" />
     <Folder Include="BL\Switch\" />
     <Folder Include="Controllers\" />
     <Folder Include="Models\" />
@@ -18,6 +17,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
   </ItemGroup>
 
   <ItemGroup>
