Configured and tested LocomotiveController

--- a/RailRoadControllerTest/RailRoadControllerTest.csproj
+++ b/RailRoadControllerTest/RailRoadControllerTest.csproj
@@ -18,4 +18,10 @@
     <ProjectReference Include="..\RailRoadController\RailRoadController.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="Microsoft.Extensions.Options">
+      <HintPath>..\..\..\..\..\..\Program Files\dotnet\sdk\NuGetFallbackFolder\microsoft.extensions.options\2.1.1\lib\netstandard2.0\Microsoft.Extensions.Options.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
