--- a/RailRoadController/RailRoadController.csproj
+++ b/RailRoadController/RailRoadController.csproj
@@ -6,7 +6,6 @@
 
   <ItemGroup>
     <Folder Include="BL\Switch\" />
-    <Folder Include="Controllers\" />
     <Folder Include="Models\" />
     <Folder Include="Mappers\" />
     <Folder Include="Utilities\" />
@@ -17,6 +16,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
   </ItemGroup>
 
