Added code coverage in CICD pipeline

--- a/RailRoadControllerTest/RailRoadControllerTest.csproj
+++ b/RailRoadControllerTest/RailRoadControllerTest.csproj
@@ -2,8 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
-
     <IsPackable>false</IsPackable>
+	<DebugType>Full</DebugType>
   </PropertyGroup>
 
   <ItemGroup>
@@ -23,5 +23,5 @@
       <HintPath>..\..\..\..\..\..\Program Files\dotnet\sdk\NuGetFallbackFolder\microsoft.extensions.options\2.1.1\lib\netstandard2.0\Microsoft.Extensions.Options.dll</HintPath>
     </Reference>
   </ItemGroup>
-
+  
 </Project>
