--- a/jenkinsfile
+++ b/jenkinsfile
@@ -32,7 +32,7 @@ node('master') {
 		 stage('Environment') {    
 				withSonarQubeEnv('SonarQube') {
 					   bat "tools\\nuget restore .\\RailRoadController.sln -Verbosity detailed"
-					   bat "dotnet C:\\sonarqube\\sonar-scanner-msbuild-4.5.0.1761-netcoreapp2.0\\SonarScanner.MSBuild.dll begin /k:${repo}:${org} /n:${repo}:${org} /v:${version} /d:sonar.host.url=%SONAR_HOST_URL% /d:sonar.exclusions=**/node_modules/**,**/*.js /d:sonar.cs.nunit.reportsPaths=TestResult.xml /d:sonar.cs.dotcover.reportsPaths=coverage.html"
+					   bat "dotnet C:\\sonarqube\\sonar-scanner-msbuild-4.5.0.1761-netcoreapp2.0\\SonarScanner.MSBuild.dll begin /k:${repo}:${org} /n:${repo}:${org} /v:${version} /d:sonar.host.url=%SONAR_HOST_URL% /d:sonar.exclusions=**/node_modules/**,**/*.js /d:sonar.cs.nunit.reportsPaths=TestResult.xml /d:sonar.cs.opencover.reportsPaths=coverage.html"
 				}
 		 }
 
@@ -45,6 +45,13 @@ node('master') {
 				def testprj = "${jobpath}\\RailRoadControllerTest\\RailRoadControllerTest.csproj"
 				bat "dotnet test \"${testprj}\" -l \"trx;LogFileName=TestResult.xml\""
 		 }
+
+		 	 stage('Coverage') {
+				def opencover = "${jobpath}\\tools\\Opencover\\Opencover.console.exe"
+				def testprj = "${jobpath}\\RailRoadControllerTest\\RailRoadControllerTest.csproj"
+				bat "\"${opencover}\" -target:\"dotnet.exe\" -targetargs:\"test\" -output:coverage.html -oldStyle"
+		 }           
+		
 	
 		 stage('Code Analysis') {
 				withSonarQubeEnv('SonarQube') {
