--- a/RailRoadController/RailRoadController.csproj
+++ b/RailRoadController/RailRoadController.csproj
@@ -10,7 +10,11 @@
     <Folder Include="Models\" />
     <Folder Include="Mappers\" />
     <Folder Include="Utilities\" />
-    <Folder Include="wwwroot\" />
+    <Folder Include="wwwroot\Content\images\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\Content\RRC.css" />
   </ItemGroup>
 
   <ItemGroup>
